samples/_failures_safe/1761291583_728219_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0e76daab.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_0e76daab.c:175:9: error: expected declaration or statement at end of input
  175 |         parse_term(stream);
      |         ^~~~~~~~~~
./samples/SAFE/__tmp_0e76daab.c:175:9: error: expected declaration or statement at end of input
